# packages/openapi/src/fetch/user/user/models/index.ts
@@ -3,5 +3,6 @@
 export * from './AuthToken';
 export * from './ProtobufAny';
 export * from './RpcStatus';
-export * from './UserLoginResponse';
-export * from './UserUser';
+export * from './UserLoginMobileRequest';
+export * from './UserLoginWeixinRequest';
+export * from './UserRegisterMobileRequest';
